// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`time-picker-field Renders \`time-picker-field\` with custom props 1`] = `
<div
  class="v-input time-picker__select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--placeholder v-select v-autocomplete"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label v-label--active theme--light"
          style="left: 0px; position: absolute;"
        >
          label
        </label>
        <input
          autocomplete="off"
          type="text"
        />
        <input
          type="hidden"
          value="12:15"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`time-picker-field Renders \`time-picker-field\` with custom props 2`] = `undefined`;

exports[`time-picker-field Renders \`time-picker-field\` with default props 1`] = `
<div
  class="v-input time-picker__select v-input--hide-details theme--light v-text-field v-text-field--placeholder v-select v-autocomplete"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <input
          autocomplete="off"
          placeholder="−−:−−"
          type="text"
        />
        <input
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`time-picker-field Renders \`time-picker-field\` with default props 2`] = `undefined`;

exports[`time-picker-field Renders \`time-picker-field\` with rounded hours 1`] = `
<div
  class="v-input time-picker__select v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--placeholder v-select v-autocomplete"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <input
          autocomplete="off"
          placeholder="−−:−−"
          type="text"
        />
        <input
          type="hidden"
          value="12:00"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`time-picker-field Renders \`time-picker-field\` with rounded hours 2`] = `undefined`;
